# GHF

./: CMakeLists.txt  README.md  build_fock.cpp  ccsd.cpp  h2o.inp  mp2.cpp  my_hf.cpp  one_body_ints.cpp  scf_helper.cpp  so_integrals.cpp  util.cpp
test/: ch4.inp  ch4.xyz  cl.inp  cl.xyz  h.inp  h.xyz  h2o.inp  h2o.xyz  he.inp  nh2.inp  nh2.xyz  no.inp  no.xyz
